--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 html,
 body {
@@ -166,11 +165,8 @@ body {
   position: relative;
   z-index: -9999;
   width: 100vw;
-}
-
-body {
-  font-family: "noto sans CJK KR";
   color: #222;
+  font-family: "noto sans CJK KR";
   font-size: 0.652rem;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -181,606 +177,276 @@ header {
   top: 0;
   z-index: 99999;
   width: 100vw;
-  height: 80px;
-  background-color: #f2f2f2;
-  border-bottom: 1px solid #ebebeb;
+  height: 120px;
+  padding-top: 30px;
+  background-color: #222;
+  box-sizing: border-box;
 }
 
 header .hd_bg {
   display: none;
   position: absolute;
-  top: 80px;
-  width: 100vw;
-  height: 40px;
-  background-color: rgba(255, 255, 255, 0.7);
+  top: 120px;
+  width: 100%;
+  height: 300px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-header .hd_content {
+header .hd_container {
   position: relative;
-  width: 1000px;
+  width: 1200px;
   margin: 0 auto;
-}
-
-header .hd_content h1.logo {
-  width: 100px;
-  height: 50px;
-  padding: 15px 0;
-  font-size: 2rem;
-  line-height: 50px;
-}
-
-header .hd_content nav .gnb {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 150px;
-  width: 330px;
-  padding: 15px 0;
-  font-size: 1.3rem;
-  font-weight: 800;
-  text-align: center;
-  line-height: 50px;
-}
-
-header .hd_content nav .gnb li {
-  width: 110px;
-}
-
-header .hd_content nav .gnb li a:hover {
-  color: #ff6600;
-}
-
-header .hd_content nav .gnb li:nth-of-type(1) .lnb li:nth-of-type(1):after, header .hd_content nav .gnb li:nth-of-type(1) .lnb li:nth-of-type(2):after, header .hd_content nav .gnb li:nth-of-type(1) .lnb li:nth-of-type(6):after {
-  content: "";
-  position: absolute;
-  bottom: -60px;
-  width: 15px;
-  height: 15px;
-  margin-left: -8px;
-  background-image: url(./../images/up.png);
-  background-size: contain;
-  animation: updown 1s infinite;
-}
-
-@keyframes updown {
-  0% {
-    transform: translateY(-2px);
-  }
-  50% {
-    transform: translateY(2px);
-  }
-  100% {
-    transform: translateY(-2px);
-  }
-}
-
-header .hd_content nav .gnb li .lnb {
-  display: none;
-  position: relative;
-  z-index: 9999;
-  width: 1000px;
-  margin-top: 15px;
-}
-
-header .hd_content nav .gnb li .lnb li {
-  float: left;
-  width: 110px;
-  line-height: 40px;
-}
-
-header .hd_content nav .gnb li .lnb a {
-  display: block;
-}
-
-header .hd_content nav .gnb li .lnb a:hover {
   color: #fff;
-  background-color: #ff6600;
 }
 
-header .hd_content .mypage > ul {
+header .hd_container .hd_top {
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 130px;
-  line-height: 50px;
+  width: 1200px;
+  height: 50px;
 }
 
-header .hd_content .mypage > ul > li {
-  width: 40px;
-  height: 40px;
-  margin: 20px 0;
-  font-size: 1rem;
-  text-indent: -9999px;
-  background-size: 60%;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(1) {
-  background-image: url(./../images/gnb_alert.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(1):hover {
-  background-image: url(./../images/gnb_alert_c.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(2) {
-  background-image: url(./../images/gnb_reservation.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(2):hover {
-  background-image: url(./../images/gnb_reservation_c.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(3) {
-  background-image: url(./../images/gnb_user.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(3):hover {
-  background-image: url(./../images/gnb_user_c.png);
-}
-
-header .hd_content .mypage > ul > li:nth-of-type(3):hover ol {
+header .hd_container .hd_top span {
+  width: 180px;
   display: block;
+  font-size: 0.8rem;
 }
 
-header .hd_content .mypage > ul > li ol {
-  display: none;
-  margin: 10px 0 10px -30px;
-  width: 100px;
-  background-color: rgba(255, 255, 255, 0.5);
+header .hd_container .hd_top span i {
+  font-size: 1.5rem;
+  margin-right: 5px;
 }
 
-header .hd_content .mypage > ul > li ol li {
-  text-indent: 0;
-  text-align: center;
-  line-height: 40px;
+header .hd_container .hd_top span a {
+  color: #fff;
   font-weight: 800;
-}
-
-header .hd_content .mypage > ul > li ol li:nth-of-type(1) {
-  border-bottom: 1px solid #919191;
-}
-
-header .hd_content .mypage > ul > li ol li a:hover {
-  color: #ff6600;
-}
-
-h4 {
-  display: inline-block;
   font-size: 1.2rem;
-  margin: 0;
-  margin-bottom: 40px;
-  color: #ff6600;
-  font-weight: 800;
-  line-height: 25px;
-  border-bottom: 2px solid #ff6600;
+  margin-left: 5px;
+  padding-left: 10px;
+  border-left: 2px solid #fff;
 }
 
-h2 {
-  margin-bottom: 30px;
+header .hd_container .hd_top h1 a {
+  color: #fff;
   font-size: 2.5rem;
   font-weight: 800;
 }
 
-p {
-  margin-bottom: 40px;
-  font-size: 1.3rem;
-  line-height: 1.5;
+header .hd_container .hd_top .mypage {
+  display: flex;
+  width: 160px;
+}
+
+header .hd_container .hd_top .mypage li a {
+  display: block;
+  width: 80px;
+  color: #fff;
+  font-size: 1.1rem;
+  text-align: center;
+  border-left: 2px solid #fff;
+}
+
+header .hd_container .hd_top .mypage li a:hover {
+  display: inline-block;
+  font-weight: 800;
+}
+
+header .hd_container .hd_top .mypage li:first-child a {
+  border-left: none;
+}
+
+header .hd_container nav {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: calc(50% - 600px);
+  width: 1200px;
+  height: 300px;
+  margin: 0 auto;
+  border-top: 1px solid #5c5c5c;
+  box-sizing: border-box;
+}
+
+header .hd_container nav .gnb {
+  display: flex;
+  position: absolute;
+  z-index: 9999;
+}
+
+header .hd_container nav .gnb li {
+  width: 150px;
+}
+
+header .hd_container nav .gnb li a {
+  display: block;
+  width: 100%;
+  color: #fff;
+  line-height: 40px;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+header .hd_container nav .gnb li:hover, header .hd_container nav .gnb li.on {
+  margin-top: -2px;
+  border-top: 2px solid #f3da6a;
+}
+
+header .hd_container nav .gnb li:hover a, header .hd_container nav .gnb li.on a {
+  color: #f3da6a;
+  font-weight: 800;
+}
+
+header .hd_container nav .gnb li .lnb {
+  display: none;
+}
+
+header .hd_container nav .gnb li .lnb li {
+  display: block;
+}
+
+header .hd_container nav .gnb li .lnb li a {
+  display: block;
+  width: 150px;
+  height: 40px;
+  color: #fff;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+header .hd_container nav .gnb li .lnb li:hover, header .hd_container nav .gnb li .lnb li.on {
+  margin-top: 0;
+  border-top: none;
+}
+
+header .hd_container nav .gnb li .lnb li:hover a, header .hd_container nav .gnb li .lnb li.on a {
+  color: #f3da6a;
+  font-weight: 800;
 }
 
 section.main {
+  position: relative;
   width: 100vw;
   height: 600px;
-  margin-top: 80px;
-  background-color: #fce5e5;
+  padding-top: 120px;
+  background-color: #6ed9fa;
+  background: linear-gradient(#3477cf, #5cc4e4, #fff);
 }
 
-section.reservation .res_container {
-  width: 1000px;
-  height: 300px;
-  margin: -80px auto 0;
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-section.travel_slide {
-  position: relative;
-  z-index: -9999;
-  width: 100vw;
-  padding: 100px 0;
-}
-
-section.travel_slide .tra_title {
-  text-align: center;
-}
-
-section.travel_slide .tra_title h4 {
-  margin-bottom: 20px;
-}
-
-section.travel_slide .tra_title h2 {
-  margin-bottom: 50px;
-}
-
-section.travel_slide .tra_slide {
-  overflow: hidden;
-  width: 1000px;
-  height: 450px;
-  margin: 0 auto;
-}
-
-section.travel_slide .tra_slide .screen {
+section.main .mn_bg .mn_city {
+  position: absolute;
+  bottom: 60px;
+  z-index: 50;
   display: flex;
-  justify-content: space-evenly;
-  position: relative;
-  z-index: 1000;
+  width: calc(100vw * 6);
+  height: 600px;
+  animation: city 15s linear infinite;
 }
 
-section.travel_slide .tra_slide .screen .slide_container {
+section.main .mn_bg .mn_city li {
+  width: calc(100vw * 2);
+  height: 480px;
+  background-image: url(./../images/background_ani.png);
+  background-size: cover;
+  background-repeat: repeat-x;
+}
+
+section.main .mn_bg .cloude {
   position: absolute;
   top: 0;
-  width: 250px;
-  height: 400px;
-  margin: 0 10px;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #eee;
-  border-radius: 20px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  transform: scale(0.8);
-  transition: 0.5s;
-}
-
-section.travel_slide .tra_slide .screen .slide_container:nth-of-type(1) {
-  left: -300px;
-}
-
-section.travel_slide .tra_slide .screen .slide_container:nth-of-type(2) {
-  left: 0;
-}
-
-section.travel_slide .tra_slide .screen .slide_container:nth-of-type(3) {
-  left: 350px;
-  transform: scale(1);
-}
-
-section.travel_slide .tra_slide .screen .slide_container:nth-of-type(4) {
-  left: 700px;
-}
-
-section.travel_slide .tra_slide .screen .slide_container:nth-of-type(5) {
-  left: 1000px;
-}
-
-section.travel_slide .tra_slide .screen .slide_container .nic_top {
+  z-index: 0;
   display: flex;
+  width: calc(100vw * 4);
+  height: 600px;
+  animation: city 20s -10s linear infinite;
 }
 
-section.travel_slide .tra_slide .screen .slide_container .nic_top .nic_pic {
-  width: 45px;
-  height: 45px;
-  margin-right: 15px;
+section.main .mn_bg .cloude li {
+  width: calc(100vw * 2);
+  height: 600px;
+  background-image: url(./../images/cloude.png);
   background-size: cover;
-  background-position: center;
-  border-radius: 50%;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  background-repeat: repeat-x;
 }
 
-section.travel_slide .tra_slide .screen .slide_container .nic_top .nic_pic:nth-of-type(1) {
-  background-image: url(./../images/nic_pic.png);
+@keyframes city {
+  0% {
+    transform: translateX(0vw);
+  }
+  100% {
+    transform: translateX(-200vw);
+  }
 }
 
-section.travel_slide .tra_slide .screen .slide_container .nic_top .nic_content {
-  padding: 5px 0;
-}
-
-section.travel_slide .tra_slide .screen .slide_container .nic_top .nic_content h3 {
-  font-size: 1.5rem;
-}
-
-section.travel_slide .tra_slide .screen .slide_container .nic_top .nic_content span {
-  display: inline-block;
-  margin-top: 5px;
-  color: #999;
-  font-weight: 800;
-}
-
-section.travel_slide .tra_slide .screen .tra_pic {
-  width: 250px;
-  height: 240px;
-  margin-top: 20px;
-  background-color: #fff;
-  background-size: cover;
-}
-
-section.travel_slide .tra_slide .screen .tra_pic.seoul {
-  background-image: url(./../images/seoul.jpg);
-}
-
-section.travel_slide .tra_slide .screen .tra_pic.gangneung {
-  background-image: url(./../images/gangneung.jpg);
-}
-
-section.travel_slide .tra_slide .screen .tra_pic.dokdo {
-  background-image: url(./../images/dokdo.jpg);
-  background-position: center center;
-}
-
-section.travel_slide .tra_slide .screen .tra_pic.damyang {
-  background-image: url(./../images/damyang.jpg);
-}
-
-section.travel_slide .tra_slide .screen .tra_pic.jeju {
-  background-image: url(./../images/jeju.jpg);
-}
-
-section.travel_slide .tra_slide .screen .tra_content {
-  margin-top: 30px;
-  padding-top: 15px;
-  border-top: 1px solid #bebebe;
-}
-
-section.travel_slide .tra_slide .screen .tra_content p {
-  margin: 0;
-  padding: 0;
-}
-
-section.travel_slide .tra_slide .screen .tra_content span {
-  color: #999999;
-  font-size: 1.2rem;
-}
-
-section.travel_slide .tra_slide .screen .tra_content div.heart {
-  display: block;
+section.main .mn_bg .bus {
   position: absolute;
-  right: 20px;
-  bottom: 30px;
-  width: 35px;
-  height: 35px;
-  background-image: url(./../images/heart.png);
+  bottom: 130px;
+  left: calc(50% - 110px);
+  z-index: 150;
+  width: 220px;
+  height: 150px;
+  background-image: url(./../images/bus.png);
   background-size: contain;
-  background-position: center;
 }
 
-@keyframes heart {
+section.main .mn_bg .bus .wheel {
+  position: absolute;
+  bottom: 10px;
+  left: calc(50% - 75px);
+  width: 40px;
+  height: 40px;
+  background-image: url(./../images/wheel.png);
+  background-size: contain;
+  animation: wheel 2s linear infinite;
+}
+
+section.main .mn_bg .bus .wheel_b {
+  position: absolute;
+  left: calc(50% + 32px);
+}
+
+@keyframes wheel {
   0% {
-    background-image: url(./../images/heart_c.png);
-    transform: translateY(-2px);
-  }
-  50% {
-    transform: translateY(2px);
+    transform: rotate(0deg);
   }
   100% {
-    background-image: url(./../images/heart_c.png);
-    transform: translateY(0px);
+    transform: rotate(359deg);
   }
 }
 
-@keyframes b_heart {
-  0% {
-    background-image: url(./../images/heart.png);
-    transform: translateY(-2px);
-  }
-  50% {
-    transform: translateY(2px);
-  }
-  100% {
-    background-image: url(./../images/heart.png);
-    transform: translateY(0px);
-  }
-}
-
-.tra_button {
-  display: flex;
-  justify-content: center;
-  width: 100px;
-  margin: 20px auto 0;
-}
-
-.tra_button a {
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
-  text-indent: -9999px;
-  border-radius: 50%;
-  background-color: #fff;
-  background-size: 60%;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-}
-
-.tra_button a.play {
-  background-image: url(./../images/start.png);
-}
-
-.tra_button a.pause {
-  background-image: url(./../images/stop.png);
-}
-
-.tra_button a:hover,
-.tra_button a.on {
-  box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
-}
-
-section.theme {
-  width: 100vw;
-  height: 800px;
-  background-color: #fde3aa;
-}
-
-section.theme .theme_container {
-  width: 1000px;
-  height: 800px;
-  margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-section.best {
-  width: 100vw;
-  background-image: url(./../images/dokdo_bg1.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-section.best .be_container {
-  position: relative;
-  width: 1000px;
-  height: 540px;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
-section.best .be_container .best_left {
-  position: relative;
-  left: 0;
-  width: 450px;
-  height: 100%;
-  background-color: rgba(57, 88, 105, 0.7);
-  box-sizing: border-box;
-}
-
-section.best .be_container .best_left:after {
-  display: block;
+section.main .mn_bg .road {
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 100px;
   z-index: 100;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-section.best .be_container .best_left .best_content {
-  padding: 80px 50px;
-}
-
-section.best .be_container .best_left .best_content h2 {
-  margin-bottom: 40px;
-  color: #fff;
-  font-size: 2.5rem;
-  font-weight: 600;
-  line-height: 35px;
-}
-
-section.best .be_container .best_left .best_content h2::before {
-  display: block;
-  content: "이번달 추천 여행지";
-  width: 105px;
-  margin-bottom: 20px;
-  color: #73d7e4;
-  font-size: 1.2rem;
-  font-weight: 800;
-  line-height: 20px;
-  border-bottom: 1.5px solid #73d7e4;
-}
-
-section.best .be_container .best_left .best_content p {
-  width: 250px;
-  margin-bottom: 70px;
-}
-
-section.best .be_container .best_left .best_content .btn {
-  margin-top: 15px;
-}
-
-section.best .be_container .best_left .best_content .btn:nth-of-type(1) {
-  margin-top: 50px;
-}
-
-section.best .be_container .best_right {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  z-index: 100;
-  width: 640px;
-  height: 400px;
-}
-
-section.best .be_container .best_right .best_container {
-  display: flex;
-}
-
-section.best .be_container .best_right .best_container li {
-  width: 250px;
-  height: 400px;
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-section.best .be_container .best_right .best_container li a .best_pic {
-  width: 100%;
-  height: 50%;
-  margin: 0;
-  padding: 0;
-  background-color: #222;
-  background-image: url(./../images/dokdo_1.jpg);
-  background-size: cover;
-  background-position: center;
-  border-radius: 20px 20px 0 0;
-}
-
-section.best .be_container .best_right .best_container li a h3 {
-  margin: 30px 20px 10px;
-  font-size: 1.7rem;
-  line-height: 25px;
-}
-
-section.best .be_container .best_right .best_container li a h3:before {
-  display: block;
-  content: "#독도이벤트 #광복절";
-  color: #9c9a9a;
-  font-size: 1rem;
-}
-
-section.best .be_container .best_right .best_container li a p {
-  margin: 0 20px;
-}
-
-section.best .be_container .best_right .best_container li:nth-of-type(2) {
-  position: absolute;
-  right: 0;
-  width: 355px;
-  background-color: #fff;
-}
-
-section.best .be_container .best_right .best_container li:nth-of-type(2) a {
-  display: block;
-}
-
-section.best .be_container .best_right .best_container li:nth-of-type(2) a iframe {
-  width: 100%;
+  width: 100vw;
   height: 200px;
-  border-radius: 20px 20px 0 0;
+  background-image: url(./../images/road.png);
+  background-size: contain;
 }
 
-section.best .be_container .best_right .best_container li:nth-of-type(2) a iframe h3 {
-  margin: 30px 20px 10px;
-  font-size: 1.7rem;
-  line-height: 25px;
-}
-
-section.best .be_container .best_right .best_container li:nth-of-type(2) a iframe h3:before {
+section.main .mn_bg .road span {
   display: block;
-  content: "#동영상 #광복절";
-  color: #9c9a9a;
-  font-size: 1rem;
+  position: absolute;
+  bottom: -100px;
+  width: 100vw;
+  height: 100px;
+  background-color: #e8e5dd;
 }
 
-section.best .be_container .best_right .best_container li:nth-of-type(2) a iframe p {
-  margin: 0 20px;
+section.suggestion {
+  position: relative;
+  width: 100vw;
+  height: 300px;
+}
+
+section.suggestion .sg_container {
+  position: relative;
+  top: -100px;
+  z-index: 200;
+  width: 900px;
+  height: 300px;
+  margin: 0 auto;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 footer {
