--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -269,6 +269,7 @@ section.main {
       height: 200px;
       background-image: url(./../images/road.png);
       background-size: contain;
+      background-repeat: no-repeat;
 
       span {
         display: block;
