--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -420,7 +420,7 @@ section.main .mn_bg .road {
   width: 100vw;
   height: 200px;
   background-image: url(./../images/road.png);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
