--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -268,7 +268,7 @@ section.main {
       width: 100vw;
       height: 200px;
       background-image: url(./../images/road.png);
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
 
       span {
