--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -179,7 +179,7 @@ section.main {
   .mn_bg {
     .mn_city {
       position: absolute;
-      bottom: 60px;
+      bottom: 40px;
       z-index: 50;
       display: flex;
       width: calc(100vw * 6);
@@ -197,7 +197,7 @@ section.main {
 
     .cloude {
       position: absolute;
-      top: 0;
+      top: 50px;
       z-index: 0;
       display: flex;
       width: calc(100vw * 4);
@@ -262,7 +262,7 @@ section.main {
 
     .road {
       position: absolute;
-      bottom: 100px;
+      bottom: 80px;
       z-index: 100;
 
       width: 100vw;
