--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -292,10 +292,10 @@ section.suggestion {
 
   .sg_container {
     position: relative;
-    top: -100px;
+    top: -80px;
     z-index: 200;
     width: 900px;
-    height: 300px;
+    height: 250px;
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -431,33 +431,22 @@ footer {
       width: 150px;
 
       .fot_list {
-        overflow: hidden;
-        display: block;
-        position: relative;
-        z-index: 100;
-        width: 150px;
-        height: 25px;
-        font-size: 1.2rem;
-        line-height: 25px;
-        border: 1px solid #777;
-
-        span {
-          position: absolute;
-          right: -1px;
-          top: -2px;
-          display: block;
-          width: 25px;
-          height: 27px;
-          background-color: #777;
-          background-image: url(./../images/fot_btn_down.png);
-          background-size: 70%;
-          background-repeat: no-repeat;
-          background-position: center 6px;
-        }
-
-        &.on {
-          .fot_btn {
-            background-image: url(./../images/fot_btn_up.png);
+        select {
+          width: 100%;
+          height: 25px;
+          color: #fff;
+          font-family: "noto sans CJK KR";
+          font-size: 1.2rem;
+          text-indent: 10px;
+          background-color: #555;
+          border: 1px solid #555;
+          // appearance: none;
+          option {
+            display: block;
+            font-size: 1.2rem;
+            text-indent: 10px;
+            line-height: 25px;
+            box-shadow: none;
           }
         }
       }
