--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -106,7 +106,7 @@ header {
       left: calc(50% - 600px);
 
       width: 1200px;
-      height: 300px;
+
       margin: 0 auto;
       border-top: 1px solid rgb(92, 92, 92);
       box-sizing: border-box;
@@ -281,6 +281,41 @@ section.main {
       }
     }
   }
+
+  .talk {
+    position: absolute;
+    top: 230px;
+    left: calc(50% - 100px);
+    z-index: 500;
+    width: 200px;
+    height: 230px;
+    background-image: url(./../images/mn_talk.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    animation: talk 2s infinite linear;
+
+    h2 {
+      font-size: 3rem;
+      text-align: center;
+      margin-top: 32%;
+      span {
+        color: rgb(253, 190, 54);
+      }
+    }
+
+    @keyframes talk {
+      0% {
+        transform: rotate(3deg);
+      }
+      50% {
+        transform: rotate(-3deg);
+      }
+      100% {
+        transform: rotate(3deg);
+      }
+    }
+  }
 }
 
 section.suggestion {
@@ -288,18 +323,82 @@ section.suggestion {
 
   width: 100vw;
   height: 300px;
-  // background-color: #e8e5dd;
+  background-color: rgb(88, 195, 202);
 
   .sg_container {
     position: relative;
     top: -80px;
     z-index: 200;
     width: 900px;
-    height: 250px;
+    height: 350px;
     margin: 0 auto;
+    padding: 30px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+
+    h2 {
+      font-size: 1.5rem;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
+
+    .where {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #555;
+
+      input {
+        width: 170px;
+        height: 40px;
+        margin-bottom: 20px;
+        font-family: "noto sans CJK KR";
+        text-indent: 10px;
+        font-size: 1.2rem;
+        border: 1px solid #555;
+      }
+      .date {
+        display: flex;
+        justify-content: space-between;
+        width: 250px;
+        height: 42px;
+        margin-bottom: 20px;
+
+        font-family: "noto sans CJK KR";
+        text-indent: 10px;
+        font-size: 1.2rem;
+        line-height: 40px;
+        border: 1px solid #555;
+
+        input {
+          width: 130px;
+          height: 42px;
+          margin: 0;
+          border: none;
+        }
+      }
+
+      a {
+        display: block;
+        width: 120px;
+        height: 42px;
+        margin-bottom: 20px;
+
+        color: #fff;
+        font-size: 1.2rem;
+        line-height: 42px;
+        text-align: center;
+        font-weight: 800;
+        background-color: #222;
+      }
+    }
   }
+}
+
+section.travel_slide {
+  width: 100vw;
+  height: 500px;
+  background-color: rgb(88, 195, 202);
 }
 
 footer {
@@ -436,16 +535,13 @@ footer {
           height: 25px;
           color: #fff;
           font-family: "noto sans CJK KR";
-          font-size: 1.2rem;
+          font-size: 1.1rem;
+          font-weight: 800;
           text-indent: 10px;
+          line-height: 25px;
           background-color: #555;
           border: 1px solid #555;
-          // appearance: none;
           option {
-            display: block;
-            font-size: 1.2rem;
-            text-indent: 10px;
-            line-height: 25px;
             box-shadow: none;
           }
         }
