--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -323,7 +323,7 @@ section.suggestion {
 
   width: 100vw;
   height: 300px;
-  background-color: rgb(88, 195, 202);
+  background-color: #4dbdac;
 
   .sg_container {
     position: relative;
@@ -396,9 +396,274 @@ section.suggestion {
 }
 
 section.travel_slide {
+  position: relative;
   width: 100vw;
   height: 500px;
-  background-color: rgb(88, 195, 202);
+  padding: 80px 0;
+  background-color: #4dbdac;
+
+  .tra_container {
+    display: flex;
+    justify-content: center;
+
+    width: 1200px;
+    margin: 50px auto 0;
+    .tra_title {
+      width: 30%;
+      padding: 0 20px;
+      h4 {
+        display: inline-block;
+        margin-bottom: 40px;
+        padding-top: 5px;
+
+        color: #19361e;
+        font-size: 1.2rem;
+
+        border-top: 3px solid #19361e;
+      }
+
+      h2 {
+        color: #fff;
+        font-size: 4.2rem;
+        font-weight: 800;
+      }
+
+      span {
+        display: block;
+        width: 20px;
+        height: 2px;
+        margin-top: 150px;
+        background-color: #fff;
+      }
+      p {
+        margin-top: 30px;
+
+        color: #fff;
+        font-weight: 300;
+        font-size: 1.2rem;
+        line-height: 20px;
+      }
+    }
+
+    .tra_slide {
+      overflow: hidden;
+      width: 55%;
+      // background-color: #fff;
+
+      .screen {
+        display: flex;
+        justify-content: space-evenly;
+
+        position: relative;
+        z-index: 100;
+
+        .slide_container {
+          position: absolute;
+          top: 0;
+
+          width: 250px;
+          height: 330px;
+          margin: 0 10px;
+          padding: 20px;
+          background-color: #fff;
+          border: 1px solid #eee;
+          border-radius: 20px;
+
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+          transform: scale(0.8);
+          transition: 0.5s;
+
+          &:nth-of-type(1) {
+            left: -300px;
+          }
+          &:nth-of-type(2) {
+            left: 0px;
+          }
+          &:nth-of-type(3) {
+            z-index: 100;
+            left: 150px;
+            transform: scale(1);
+          }
+          &:nth-of-type(4) {
+            left: 330px;
+          }
+          &:nth-of-type(5) {
+            left: 650px;
+          }
+          a {
+            display: block;
+            width: 250px;
+            height: 330px;
+
+            .nic_top {
+              display: flex;
+
+              .nic_pic {
+                width: 45px;
+                height: 45px;
+                margin-right: 15px;
+
+                background-size: cover;
+                background-position: center;
+                border-radius: 50%;
+
+                box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+                &:nth-of-type(1) {
+                  background-image: url(./../images/mn_talk.png);
+                  background-size: contain;
+                }
+              }
+
+              .nic_content {
+                padding: 5px 0;
+                h3 {
+                  font-size: 1.5rem;
+                }
+                span {
+                  display: inline-block;
+                  margin-top: 5px;
+                  color: #999;
+                  font-weight: 800;
+                }
+              }
+            }
+
+            .tra_pic {
+              width: 250px;
+              height: 180px;
+              margin-top: 20px;
+              background-color: #fff;
+              background-size: cover;
+
+              &.seoul {
+                background-image: url(./../images/seoul.jpg);
+              }
+
+              &.gangneung {
+                background-image: url(./../images/gangneung.jpg);
+              }
+
+              &.dokdo {
+                background-image: url(./../images/dokdo.jpg);
+                background-position: center center;
+              }
+
+              &.damyang {
+                background-image: url(./../images/damyang.jpg);
+              }
+
+              &.jeju {
+                background-image: url(./../images/jeju.jpg);
+              }
+            }
+
+            .tra_content {
+              margin-top: 30px;
+              padding-top: 15px;
+              border-top: 1px solid #bebebe;
+              p {
+                margin: 0;
+                padding: 0;
+              }
+              span {
+                color: #999999;
+                font-size: 1.2rem;
+              }
+              div.heart {
+                display: block;
+                position: absolute;
+                right: 20px;
+                bottom: 30px;
+                width: 35px;
+                height: 35px;
+                background-image: url(./../images/heart.png);
+                // background-image: url(./../images/heart_c.png);
+                background-size: contain;
+                background-position: center;
+              }
+              @keyframes heart {
+                0% {
+                  background-image: url(./../images/heart_c.png);
+                  transform: translateY(-2px);
+                }
+                50% {
+                  transform: translateY(2px);
+                }
+                100% {
+                  background-image: url(./../images/heart_c.png);
+                  transform: translateY(0px);
+                }
+              }
+              @keyframes b_heart {
+                0% {
+                  background-image: url(./../images/heart.png);
+                  transform: translateY(-2px);
+                }
+                50% {
+                  transform: translateY(2px);
+                }
+                100% {
+                  background-image: url(./../images/heart.png);
+                  transform: translateY(0px);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .tra_button {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      bottom: 100px;
+      right: calc(50% - 230px);
+      width: 100px;
+      margin: 20px auto 0;
+
+      a {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin: 0 auto;
+
+        text-indent: -9999px;
+        border-radius: 50%;
+
+        background-color: #4dbdac;
+        background-size: 60%;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        cursor: pointer;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+
+        &.play {
+          background-image: url(./../images/start.png);
+        }
+
+        &.pause {
+          background-image: url(./../images/stop.png);
+        }
+      }
+      a:hover,
+      a.on {
+        box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
+      }
+    }
+  }
+}
+
+section.aa {
+  width: 100vw;
+  height: 200px;
+  background-color: #000;
+}
+section.bb {
+  width: 100vw;
+  height: 500px;
+  background-color: #fff;
 }
 
 footer {
