--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -509,7 +509,7 @@ section.travel_slide {
 
                 box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
                 &:nth-of-type(1) {
-                  background-image: url(./../images/mn_talk.png);
+                  background-image: url(./../images/nic_pic.png);
                   background-size: contain;
                 }
               }
