--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -416,10 +416,10 @@ section.travel_slide {
         margin-bottom: 40px;
         padding-top: 5px;
 
-        color: #19361e;
+        color: #b4f5eb;
         font-size: 1.2rem;
 
-        border-top: 3px solid #19361e;
+        border-top: 3px solid #b4f5eb;
       }
 
       h2 {
@@ -658,12 +658,12 @@ section.travel_slide {
 section.aa {
   width: 100vw;
   height: 200px;
-  background-color: #000;
+  background-color: #fff;
 }
 section.bb {
   width: 100vw;
   height: 500px;
-  background-color: #fff;
+  background-color: rgb(231, 231, 231);
 }
 
 footer {
