--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -574,7 +574,7 @@ section.travel_slide .tra_container .tra_title h4 {
 section.travel_slide .tra_container .tra_title h2 {
   color: #fff;
   font-size: 4.2rem;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 section.travel_slide .tra_container .tra_title span {
@@ -595,7 +595,7 @@ section.travel_slide .tra_container .tra_title p {
 
 section.travel_slide .tra_container .tra_slide {
   overflow: hidden;
-  width: 55%;
+  width: 53%;
 }
 
 section.travel_slide .tra_container .tra_slide .screen {
@@ -805,10 +805,48 @@ section.travel_slide .tra_container .tra_button a.on {
   box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
 }
 
-section.aa {
+section.item {
   width: 100vw;
   height: 200px;
   background-color: #fff;
+}
+
+section.item .item_container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+section.item .item_container .inr {
+  display: flex;
+  justify-content: space-evenly;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+section.item .item_container .inr li > a {
+  display: block;
+  width: 150px;
+  height: 150px;
+  padding-top: 100px;
+  margin: 25px 0;
+  color: #777;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+section.item .item_container .inr li > a::before {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: -90px auto 10px;
+  border: 1px solid #777;
+}
+
+section.item .item_container .inr li > a:hover {
+  font-weight: 800;
 }
 
 section.bb {
