--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -807,7 +807,7 @@ section.travel_slide .tra_container .tra_button a.on {
 
 section.item {
   width: 100vw;
-  height: 200px;
+  height: 150px;
   background-color: #fff;
 }
 
@@ -825,8 +825,8 @@ section.item .item_container .inr {
 
 section.item .item_container .inr li > a {
   display: block;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   padding-top: 100px;
   margin: 25px 0;
   color: #777;
@@ -839,14 +839,40 @@ section.item .item_container .inr li > a {
 section.item .item_container .inr li > a::before {
   content: "";
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin: -90px auto 10px;
-  border: 1px solid #777;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 section.item .item_container .inr li > a:hover {
   font-weight: 800;
+}
+
+section.item .item_container .inr li:nth-of-type(1) a:before {
+  background-image: url(./../images/inr_safety.svg);
+}
+
+section.item .item_container .inr li:nth-of-type(2) a:before {
+  background-image: url(./../images/inr_event.svg);
+}
+
+section.item .item_container .inr li:nth-of-type(3) a:before {
+  background-image: url(./../images/inr_tiket.svg);
+}
+
+section.item .item_container .inr li:nth-of-type(4) a:before {
+  background-image: url(./../images/inr_edu.svg);
+}
+
+section.item .item_container .inr li:nth-of-type(5) a:before {
+  background-image: url(./../images/inr_buss.svg);
+}
+
+section.item .item_container .inr li:nth-of-type(6) a:before {
+  background-image: url(./../images/inr_local.svg);
 }
 
 section.bb {
