--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -657,7 +657,7 @@ section.travel_slide {
 
 section.item {
   width: 100vw;
-  height: 200px;
+  height: 150px;
   background-color: #fff;
 
   .item_container {
@@ -673,8 +673,8 @@ section.item {
 
       li > a {
         display: block;
-        width: 150px;
-        height: 150px;
+        width: 100px;
+        height: 100px;
         padding-top: 100px;
         margin: 25px 0;
         color: #777;
@@ -686,14 +686,48 @@ section.item {
         &::before {
           content: "";
           display: block;
-          width: 100px;
-          height: 100px;
+          width: 50px;
+          height: 50px;
           margin: -90px auto 10px;
-          border: 1px solid #777;
+          // border: 1px solid #777;
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
         }
 
         &:hover {
           font-weight: 800;
+        }
+      }
+
+      li:nth-of-type(1) {
+        a:before {
+          background-image: url(./../images/inr_safety.svg);
+        }
+      }
+      li:nth-of-type(2) {
+        a:before {
+          background-image: url(./../images/inr_event.svg);
+        }
+      }
+      li:nth-of-type(3) {
+        a:before {
+          background-image: url(./../images/inr_tiket.svg);
+        }
+      }
+      li:nth-of-type(4) {
+        a:before {
+          background-image: url(./../images/inr_edu.svg);
+        }
+      }
+      li:nth-of-type(5) {
+        a:before {
+          background-image: url(./../images/inr_buss.svg);
+        }
+      }
+      li:nth-of-type(6) {
+        a:before {
+          background-image: url(./../images/inr_local.svg);
         }
       }
     }
