--- a/css/travel_home.css
+++ b/css/travel_home.css
@@ -88,7 +88,7 @@ a.btn {
   font-size: 1.2rem;
   line-height: 30px;
   font-weight: 800;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #4dbdac;
   box-sizing: border-box;
 }
 
@@ -104,7 +104,7 @@ a.btn:before {
   left: 0;
   width: 4px;
   height: 100%;
-  background: #65aab3;
+  background: #fff;
   transition: 0.5s ease-in-out;
   transition-delay: 0.5s;
 }
@@ -116,7 +116,7 @@ a.btn:after {
   right: 0;
   width: 4px;
   height: 100%;
-  background: #65aab3;
+  background: #fff;
   transition: 0.5s ease-in-out;
   transition-delay: 0.5s;
 }
@@ -145,7 +145,7 @@ a.btn span {
   left: calc(50% - 75px);
   z-index: 1000;
   width: 150px;
-  color: #65aab3;
+  color: #fff;
   transition: 0.5s;
 }
 
@@ -156,7 +156,7 @@ a.btn span:nth-of-type(1) {
 a.btn span:nth-of-type(2) {
   transform: scale(3);
   opacity: 0;
-  color: #000;
+  color: #4dbdac;
   transition-delay: 0s;
 }
 
@@ -577,20 +577,22 @@ section.travel_slide .tra_container .tra_title h2 {
   font-weight: 600;
 }
 
-section.travel_slide .tra_container .tra_title span {
-  display: block;
-  width: 20px;
-  height: 2px;
-  margin-top: 150px;
-  background-color: #fff;
-}
-
 section.travel_slide .tra_container .tra_title p {
-  margin-top: 30px;
+  margin: 30px 0;
   color: #fff;
   font-weight: 300;
   font-size: 1.2rem;
   line-height: 20px;
+}
+
+section.travel_slide .tra_container .tra_title p:before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  margin-top: 60px;
+  margin-bottom: 30px;
+  background-color: #fff;
 }
 
 section.travel_slide .tra_container .tra_slide {
@@ -875,10 +877,29 @@ section.item .item_container .inr li:nth-of-type(6) a:before {
   background-image: url(./../images/inr_local.svg);
 }
 
-section.bb {
+section.tripevent {
   width: 100vw;
-  height: 500px;
+  height: 400px;
+  padding: 50px 0;
   background-color: #e7e7e7;
+}
+
+section.tripevent .te_container {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+section.tripevent .te_container .trip {
+  width: 65%;
+  background-color: #fff;
+}
+
+section.tripevent .te_container .event {
+  width: 30%;
+  background-color: #fff;
 }
 
 footer {
@@ -890,7 +911,7 @@ footer {
 
 footer .fot_container {
   position: relative;
-  width: 1000px;
+  width: 1200px;
   margin: 0 auto;
 }
 
