--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -427,21 +427,23 @@ section.travel_slide {
         font-size: 4.2rem;
         font-weight: 600;
       }
-
-      span {
-        display: block;
-        width: 20px;
-        height: 2px;
-        margin-top: 150px;
-        background-color: #fff;
-      }
       p {
-        margin-top: 30px;
+        margin: 30px 0;
 
         color: #fff;
         font-weight: 300;
         font-size: 1.2rem;
         line-height: 20px;
+
+        &:before {
+          content: "";
+          display: block;
+          width: 20px;
+          height: 2px;
+          margin-top: 60px;
+          margin-bottom: 30px;
+          background-color: #fff;
+        }
       }
     }
 
@@ -733,10 +735,28 @@ section.item {
     }
   }
 }
-section.bb {
+section.tripevent {
   width: 100vw;
-  height: 500px;
+  height: 400px;
+  padding: 50px 0;
   background-color: rgb(231, 231, 231);
+
+  .te_container {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    height: 400px;
+    margin: 0 auto;
+
+    .trip {
+      width: 65%;
+      background-color: #fff;
+    }
+    .event {
+      width: 30%;
+      background-color: #fff;
+    }
+  }
 }
 
 footer {
@@ -748,7 +768,7 @@ footer {
   .fot_container {
     position: relative;
 
-    width: 1000px;
+    width: 1200px;
     margin: 0 auto;
 
     .fot_top {
