--- a/css/travel_home.scss
+++ b/css/travel_home.scss
@@ -738,7 +738,7 @@ section.item {
 section.tripevent {
   width: 100vw;
   height: 400px;
-  padding: 50px 0;
+  padding: 100px 0;
   background-color: rgb(231, 231, 231);
 
   .te_container {
@@ -799,8 +799,8 @@ footer {
         display: flex;
         position: relative;
         top: -20px;
-        right: -890px;
-        width: 300px;
+        right: -1000px;
+        width: 200px;
         li {
           width: 30px;
           height: 30px;
@@ -835,39 +835,49 @@ footer {
         font-size: 2rem;
         font-weight: 800;
       }
+      .inline {
+        width: 70%;
+        p {
+          display: inline-block;
+          line-height: 20px;
 
+          &:nth-of-type(1),
+          &:nth-of-type(3) {
+            padding-left: 0;
+          }
+
+          &:nth-of-type(6) {
+            margin-top: 20px;
+          }
+
+          span {
+            color: #777;
+            font-weight: 800;
+            font-size: 1rem;
+          }
+
+          &.call {
+            font-size: 1.5rem;
+            font-weight: 800;
+            border-right: none;
+          }
+        }
+      }
       p {
-        display: inline-block;
         margin: 3px 0;
         padding: 0 10px;
         font-size: 1.2rem;
         border-right: 2px solid #c4c4c4;
 
-        &:nth-of-type(1),
-        &:nth-of-type(3) {
-          padding-left: 0;
-        }
-
-        &:nth-of-type(6) {
-          margin-top: 20px;
-        }
-
-        span {
-          color: #777;
-          font-weight: 800;
-          font-size: 1rem;
-        }
-
-        &.call {
-          font-size: 1.5rem;
-          font-weight: 800;
-          border-right: none;
-        }
-
         &.caution {
           padding-left: 0;
           font-size: 1rem;
           border-right: none;
+          line-height: 15px;
+
+          &:nth-of-type(1) {
+            margin-top: 20px;
+          }
         }
       }
       a {
@@ -885,7 +895,7 @@ footer {
       position: absolute;
       right: 0;
       top: 100px;
-      width: 150px;
+      width: 200px;
 
       .fot_list {
         select {
